--- a/app/src/main/res/layout/fragment_all_notes.xml
+++ b/app/src/main/res/layout/fragment_all_notes.xml
@@ -4,17 +4,99 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".core_presentation.ui.AllNotesFragment">
+    android:background="@color/colorPrimary"
+    tools:context=".core_presentation.ui.fragments.AllNotesFragment">
+
+    <TextView
+        android:id="@+id/my_notes_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/my_notes"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="@dimen/_20ssp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginStart="@dimen/_12sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <LinearLayout
+        android:id="@+id/search_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginHorizontal="@dimen/_12sdp"
+        android:background="@drawable/background_search_layout"
+        android:layout_marginTop="@dimen/_15sdp"
+        app:layout_constraintStart_toStartOf="@id/my_notes_tv"
+        app:layout_constraintTop_toBottomOf="@id/my_notes_tv"
+        app:layout_constraintEnd_toEndOf="@id/my_notes_tv">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/search_img"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:src="@drawable/ic_search"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:tint="@color/white"/>
+        <EditText
+            android:id="@+id/search_input_et"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_35sdp"
+            android:inputType="text"
+            android:imeOptions="actionDone"
+            android:importantForAutofill="no"
+            android:hint="Search.."
+            android:background="@null"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_13ssp"
+            android:paddingStart="@dimen/_12sdp"
+            android:textColorHint="@color/colorTextHint"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/quick_actions_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/colorQuickActionsBackground"
+        android:paddingHorizontal="@dimen/_12sdp"
+        android:paddingVertical="@dimen/_15sdp"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/quick_action_add_img"
+            android:layout_width="@dimen/_23sdp"
+            android:layout_height="@dimen/_23sdp"
+            android:src="@drawable/ic_add_outline"
+            android:tint="@color/colorIcons"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/quick_action_pick_image_img"
+            android:layout_width="@dimen/_23sdp"
+            android:layout_height="@dimen/_23sdp"
+            android:src="@drawable/ic_image"
+            android:tint="@color/colorIcons"
+            android:layout_marginStart="@dimen/_15sdp"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/quick_action_web_link_img"
+            android:layout_width="@dimen/_23sdp"
+            android:layout_height="@dimen/_23sdp"
+            android:src="@drawable/ic_web_link"
+            android:tint="@color/colorIcons"
+            android:layout_marginStart="@dimen/_15sdp"/>
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvNoteList"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/quick_actions_layout"
+        app:layout_constraintTop_toBottomOf="@id/search_layout" />
 
     <TextView
         android:id="@+id/tvEmptyText"
@@ -25,19 +107,18 @@
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnAddNote"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/add_note_btn"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
+        android:layout_marginBottom="@dimen/_30sdp"
         android:clickable="true"
         android:focusable="true"
-        android:src="@drawable/ic_baseline_playlist_add_24"
-        app:backgroundTint="#4CAF50"
+        android:src="@drawable/ic_add"
+        android:tint="@color/colorPrimary"
+        android:padding="@dimen/_5sdp"
+        android:background="@drawable/background_add_btn"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/white" />
-
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
