--- a/app/src/main/res/layout/fragment_update_note.xml
+++ b/app/src/main/res/layout/fragment_update_note.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".core_presentation.ui.UpdateNoteFragment">
+    tools:context=".core_presentation.ui.fragments.UpdateNoteFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/nameCard"
