--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -92,6 +92,15 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginHorizontal="@dimen/_12sdp"
                 app:layout_constraintTop_toBottomOf="@id/subtitle_edt" />
+            <TextView
+                android:id="@+id/link_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:autoLink="web"
+                app:layout_constraintTop_toBottomOf="@id/image_img"
+                app:layout_constraintStart_toStartOf="@id/subtitle_indicator"
+                app:layout_constraintEnd_toEndOf="@id/subtitle_edt"/>
+
             <EditText
                 android:id="@+id/description_edt"
                 android:layout_width="0dp"
