--- a/app/src/main/res/layout/fragment_update_note.xml
+++ b/app/src/main/res/layout/fragment_update_note.xml
@@ -1,89 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
+    app:layout_behavior="@string/bottom_sheet_behavior"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".core_presentation.ui.fragments.UpdateNoteFragment">
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/nameCard"
+    <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="5dp"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <EditText
-            android:id="@+id/edtTitle"
+        android:layout_marginBottom="@dimen/_40sdp"
+        android:paddingBottom="@dimen/_10sdp">
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:background="@android:color/transparent"
-            android:hint="Title"
-            android:maxLines="1"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:animateLayoutChanges="false">
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ic_arrow_back_img"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:src="@drawable/ic_arrow_back"
+                android:tint="@color/colorIcons"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginStart="@dimen/_12sdp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-    </androidx.cardview.widget.CardView>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ic_done_img"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:src="@drawable/ic_done"
+                android:padding="@dimen/_5sdp"
+                android:background="@drawable/background_done_button"
+                android:tint="@color/colorIcons"
+                android:layout_marginEnd="@dimen/_12sdp"
+                app:layout_constraintTop_toTopOf="@id/ic_arrow_back_img"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/ageCard"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="8dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnSave"
-        app:layout_constraintTop_toBottomOf="@id/nameCard"
-        tools:layout_editor_absoluteX="8dp">
+            <EditText
+                android:id="@+id/title_edt"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:background="@null"
+                android:hint="@string/note_title"
+                android:textColorHint="@color/colorTextHint"
+                android:maxLines="1"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_16ssp"
+                android:textStyle="bold"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:layout_marginHorizontal="@dimen/_12sdp"
+                app:layout_constraintTop_toBottomOf="@id/ic_done_img"/>
 
-        <EditText
-            android:id="@+id/edtDesc"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="15dp"
-            android:background="@android:color/transparent"
-            android:gravity="top"
-            android:hint="Description"
-            android:inputType="text"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            <EditText
+                android:id="@+id/subtitle_edt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:background="@null"
+                android:hint="@string/note_subtitle"
+                android:textColorHint="@color/colorTextHint"
+                android:paddingVertical="@dimen/_8sdp"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_13ssp"
+                android:textStyle="bold"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/subtitle_indicator"
+                android:layout_marginHorizontal="@dimen/_12sdp"
+                app:layout_constraintTop_toBottomOf="@id/title_edt"/>
+            <View
+                android:id="@+id/subtitle_indicator"
+                android:layout_width="@dimen/_5sdp"
+                android:layout_height="0dp"
+                android:background="@drawable/background_indicator_subtitle"
+                app:layout_constraintStart_toStartOf="@id/title_edt"
+                app:layout_constraintTop_toTopOf="@id/subtitle_edt"
+                app:layout_constraintBottom_toBottomOf="@id/subtitle_edt"/>
 
-    </androidx.cardview.widget.CardView>
+            <ImageView
+                android:id="@+id/image_img"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginHorizontal="@dimen/_12sdp"
+                app:layout_constraintTop_toBottomOf="@id/subtitle_edt" />
+            <TextView
+                android:id="@+id/link_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:autoLink="web"
+                app:layout_constraintTop_toBottomOf="@id/image_img"
+                app:layout_constraintStart_toStartOf="@id/subtitle_indicator"
+                app:layout_constraintEnd_toEndOf="@id/subtitle_edt"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_baseline_save_24"
-        android:text="Save"
-        android:textColor="@color/white"
-        app:backgroundTint="#4CAF50"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/ageCard"
-        app:tint="@color/white" />
+            <EditText
+                android:id="@+id/description_edt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:background="@null"
+                android:hint="@string/description"
+                android:textColorHint="@color/colorTextHint"
+                android:paddingVertical="@dimen/_8sdp"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_13ssp"
+                android:textStyle="bold"
+                android:gravity="start"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:minHeight="@dimen/_100sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/subtitle_indicator"
+                android:layout_marginHorizontal="@dimen/_12sdp"
+                app:layout_constraintTop_toBottomOf="@id/image_img"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_baseline_delete_forever_24"
-        android:text="Delete"
-        android:textColor="@color/white"
-        app:backgroundTint="#E91E63"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnSave"
-        app:tint="@color/white"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="15dp"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/miscellaneous_layout"
+        layout="@layout/layout_miscellaneous"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
