--- a/app/src/main/res/layout/layout_miscellaneous.xml
+++ b/app/src/main/res/layout/layout_miscellaneous.xml
@@ -154,4 +154,28 @@
             android:layout_marginStart="@dimen/_6sdp"
             android:textSize="@dimen/_14ssp"/>
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/add_web_link_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:paddingHorizontal="@dimen/_12sdp">
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/add_web_link_img"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:src="@drawable/ic_web_link"
+            android:tint="@color/colorIcons"/>
+        <TextView
+            android:id="@+id/add_web_link_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_web_link"
+            android:textColor="@color/colorIcons"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/_6sdp"
+            android:textSize="@dimen/_14ssp"/>
+    </LinearLayout>
 </LinearLayout>
